--- a/lib/Platform/Intl/CMakeLists.txt
+++ b/lib/Platform/Intl/CMakeLists.txt
@@ -18,6 +18,6 @@ if(HERMES_ENABLE_INTL)
     # Work around a bug in unity builds where it tries to build Obj-C as C++.
     set_target_properties(hermesPlatformIntl PROPERTIES UNITY_BUILD false)
   else()
-    add_hermes_library(hermesPlatformIntl STATIC PlatformIntlDummy.cpp)
+    add_hermes_library(hermesPlatformIntl STATIC PlatformIntlWindows.cpp)
   endif()
 endif()
